# ps2-rich-presence

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  vcpkg.json
.github/workflows/: build.yml
app/: CMakeLists.txt  config.hpp.in  core.cpp  core.hpp  ess-client.cpp  ess-client.hpp  main.cpp  persistence.cpp  persistence.hpp  tracker.cpp  tracker.hpp  utils.cpp  utils.hpp
app/appdata/: appid.hpp  assets.cpp  assets.hpp
app/game/: character-info.cpp  character-info.hpp  state.cpp  state.hpp
app/gui/: character-manager.cpp  character-manager.hpp  main-window.cpp  main-window.hpp  timeago.hpp
app/presence/: factory.cpp  factory.hpp  handler.cpp  handler.hpp
arx/: CMakeLIsts.txt  CMakeLists.txt
arx/include/: arx.hpp
arx/include/arx/: ess.hpp  payload.hpp  ps2-types.hpp  ps2_types.hpp  query.hpp  support.hpp  types.hpp  urlgen.hpp
arx/include/arx/ess/: client.hpp  endpoint.hpp  events.hpp  payload.hpp  subs.hpp  subscription.hpp
arx/src/: payload.cpp  query.cpp  support.cpp  urlgen.cpp
arx/src/ess/: client.cpp  endpoint.cpp  events.cpp  message.cpp  payload.cpp  subs.cpp  subscription.cpp
assets/: README.md  profiles.psd
cmake/: FetchDiscord.cmake  FetchJson.cmake  FindDiscord.cmake  QtInstallDebug.cmake  QtInstallRelease.cmake  WindeployInstallHelper.cmake
cmake/vcpkg_triplets/: x64-windows-custom.cmake
core/: CMakeLists.txt
core/include/api/: ess_client.h  rest_client.h  subscriptions.h
core/src/: ess_client.cpp  rest_client.cpp  subscriptions.cpp
discord-sdk/: CMakeLists.txt
discord-sdk/lib/: .gitignore
ps2data/: CMakeLists.txt  class.cpp  class.hpp  faction.cpp  faction.hpp  id-types.hpp  ps2.hpp  server.cpp  server.hpp  vehicle.cpp  vehicle.hpp  zone.cpp  zone.hpp
ps2rpc/: CMakeLists.txt  __main__.py  _app.py  _async_helper.py  _listener.py  _presence.py  _ps2.py  _qasync.py  _rpc.py  _status.py  _typing_utils.py  config.hpp.in  core.cpp  core.hpp  ess-client.cpp  ess_client.cpp  ess_client.hpp  main.cpp  persistence.cpp  persistence.hpp  tracker.cpp  tracker.hpp  utils.cpp  utils.hpp
ps2rpc/appdata/: appid.hpp  assets.cpp  assets.hpp  serviceid.hpp
ps2rpc/discord/: __init__.py  _appid.py  _assets.py
ps2rpc/game/: __init__.py  _gamestate.py  _ps2.py  character-info.cpp  character-info.hpp  state.cpp  state.hpp
ps2rpc/gui/: character-manager.cpp  character-manager.hpp  main-window.cpp  main-window.hpp  timeago.hpp
ps2rpc/presence/: __init__.py  _factory.py  _payload.py  factory.cpp  factory.hpp  handler.cpp  handler.hpp
ps2rpc/ps2/: ps2.cpp  ps2.hpp
ps2rpc/tracking/: __init__.py  _activity.py  _online_status.py
ps2rpc/ui/: __init__.py  _about.py  _main_window.py
ps2rpc/userstate/: __init__.py  _state.py
qthelpers/: CMakeLists.txt
qthelpers/include/: adopt_pointer.h  moc_macros.h
windows/: ps2rpc.rc
